--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,11 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"runtimeExecutable": "${execPath}",
-			"args": [ "--extensionDevelopmentPath=${workspaceRoot}" ]
+			"args": [ "--extensionDevelopmentPath=${workspaceRoot}" ],
+            "stopOnEntry": false,
+            "sourceMaps": true,
+			"outDir": "${workspaceRoot}/out/src",
+            //"preLaunchTask": "npm"
 		}
 	]
 }
