--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"publisher": "Togusa09",
     "license": "MIT",
 	"engines": {
-		"vscode": "^0.10.6"
+		"vscode": "^0.10.7"
 	},
     "repository": {
         "type": "git",
@@ -19,18 +19,31 @@
 	"categories": [
 		"Languages", "Snippets"
 	],
+    "main": "./out/src/extension",
+    "activationEvents": [
+        "onLanguage:xml",
+        "onCommand:extension.showCssPropertyPreview"
+    ],
 	"contributes": {
+        "commands": [{
+           "command" : "extension.convertFile",
+           "title": "Convert File" 
+        },
+        {
+                "command": "extension.showCssPropertyPreview",
+                "title": "Show CSS Properties Preview"
+        }],
 		"languages": [{
-			"id": "json-tmlanguage",
-			"aliases": ["Sublime Text Syntax Def (JSON)", "json-tmlanguage"],
-			"extensions": [".JSON-tmLanguage"],
-			"configuration": "./json-tmlanguage.configuration.json"
-            },
-            {
+            "id": "json-tmlanguage",
+            "aliases": ["Sublime Text Syntax Def (JSON)", "json-tmlanguage"],
+            "extensions": [".JSON-tmLanguage"],
+            "configuration": "./json-tmlanguage.configuration.json"
+        },
+        {
 			"id": "yaml-tmlanguage",
 			"aliases": ["Sublime Text Syntax Def (YAML)", "yaml-tmlanguage"],
 			"extensions": [".YAML-tmLanguage"],
-			"configuration": "./yaml-tmlanguage.configuration.yaml"
+			"configuration": "./yaml-tmlanguage.configuration.json"
 		}],
 		"grammars": [
             {
@@ -54,5 +67,19 @@
                 "path": "./snippets/yaml-tmlanguage.json"
             }
         ]
-	}
+	},
+    "scripts": {
+        "vscode:prepublish": "node ./node_modules/vscode/bin/compile",
+		"compile": "node ./node_modules/vscode/bin/compile -watch -p ./",
+        "watch": "node ./node_modules/typescript/bin/tsc -w -p ./src",
+        "postinstall": "node ./node_modules/vscode/bin/install"
+    },
+    "dependencies": {
+        "plist": "^1.2.0",
+        "format-json" : "^1.0.3"
+    },
+    "devDependencies": {
+        "typescript": "^1.7.5",
+        "vscode": "^0.11.x"
+    }
 }
