--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"publisher": "Togusa09",
     "license": "MIT",
 	"engines": {
-		"vscode": "^0.10.7"
+		"vscode": "^0.11.x"
 	},
     "repository": {
         "type": "git",
