Fix regex highlighting
Regex syntax files are from PackageDev. This uses injection grammars, see https://github.com/Microsoft/vscode/issues/2793#issuecomment-221093247.

--- a/package.json
+++ b/package.json
@@ -71,7 +71,17 @@
                 "language": "yaml-tmlanguage",
                 "scopeName": "source.yaml-tmlanguage",
                 "path": "./syntaxes/yaml-tmlanguage.tmLanguage"
-		    }
+            },
+            {
+                "scopeName": "source.escapedregexp",
+                "path": "./syntaxes/Regular Expression (Escaped).tmLanguage",
+                "injectTo": ["source.json-tmlanguage"]
+            },
+            {
+                "scopeName": "source.oniregexp",
+                "path": "./syntaxes/Oniguruma Regular Expression.tmLanguage",
+                "injectTo": ["source.yaml-tmlanguage"]
+            }
         ],
         "snippets": [
             {
