Fixed source language not being set correctly when processing file

--- a/package.json
+++ b/package.json
@@ -88,6 +88,15 @@
           ".YAML-tmLanguage"
         ],
         "configuration": "./yaml-tmlanguage.configuration.json"
+      },
+      {
+        "id": "tmlanguage",
+        "aliases": [
+          "tmlanguage"
+        ],
+        "extensions": [
+          ".tmLanguage"
+        ]
       }
     ],
     "grammars": [
