Trying out test.bat

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,7 +16,8 @@ test_script:
   - node --version
   - npm --version
   # run tests
-  - npm test
+  #- npm test
+  - .\scripts\test.bat
 
 # Don't actually build.
 build: off
