--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,8 @@ install:
   # install modules
   - npm install -g vsce
   - npm install
+  - ps: Write-Host $env:APPVEYOR_BUILD_NUMBER
+  - ps: Write-Host $env:appveyor_build_version
   - ps: $env:package_version = (Get-Content -Raw -Path package.json | ConvertFrom-Json).version
   - ps: Update-AppveyorBuild -Version "$env:package_version-$env:APPVEYOR_BUILD_NUMBER"
 
