Updated obsolete config

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "icon": "images/plist_icon.png",
   "categories": [
-    "Languages",
+    "Programming Languages",
     "Snippets"
   ],
   "keywords": [
