Use CMD in appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,8 +1,6 @@
 version: 1.0.{build}
 install:
-- ps: >-
-    npm install -g vsce
-
-    npm install
+- npm install -g vsce
+- npm install
 build_script:
-- ps: vsce package
+- vsce package
