--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,11 +7,11 @@
 			"type": "extensionHost",
 			"request": "launch",
 			"runtimeExecutable": "${execPath}",
-			"args": [ "--extensionDevelopmentPath=${workspaceRoot}" ],
+			"args": [ "--extensionDevelopmentPath=${workspaceFolder}" ],
             "stopOnEntry": false,
             "sourceMaps": true,
-			"outFiles": [ "${workspaceRoot}/out/src/**/*" ]
-            //"preLaunchTask": "npm"
+			"outFiles": [ "${workspaceRoot}/out/src/**/*" ],
+            "preLaunchTask": "npm"
 		},
 		{
 			"name": "Launch Tests",
