--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,10 @@
 version: 1.0.{build}
+environment:
+  nodejs_version: "LTS"
 install:
 - npm install -g vsce
 - npm install
 build_script:
 - vsce package
+test_script:
+- npm test
