--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,7 @@ version: 1.0.{build}
 environment:
   nodejs_version: "LTS"
 install:
+- ps: Install-Product node $env:nodejs_version
 - npm install -g vsce
 - npm install
 build_script:
