--- a/package.json
+++ b/package.json
@@ -131,7 +131,7 @@
     "vscode:prepublish": "tsc -p ./",
     "compile": "tsc -watch -p ./",
     "pretest": "tsc -p ./",
-    "test": "ts-standard && node --trace-deprecation ./out/test/runTest.js"
+    "test": "ts-standard && node ./out/test/runTest.js"
   },
   "dependencies": {
     "format-json": "^1.0.3",
