--- a/package.json
+++ b/package.json
@@ -134,12 +134,12 @@
     "test": "ts-standard && node ./out/test/runTest.js"
   },
   "dependencies": {
-    "format-json": "^1.0.3",
     "jisons": "^1.0",
     "plist": "^3.0.1",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.3",
     "@types/mocha": "^8.2.2",
     "@types/node": "^14.14.44",
     "@types/plist": "^3.0.2",
