--- a/package.json
+++ b/package.json
@@ -136,7 +136,7 @@
   "dependencies": {
     "jisons": "^1.0",
     "plist": "^3.0.1",
-    "yamljs": "^0.3.0"
+    "yaml": "^1.10.0"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
@@ -144,7 +144,6 @@
     "@types/node": "^14.14.44",
     "@types/plist": "^3.0.2",
     "@types/vscode": "^1.55.0",
-    "@types/yamljs": "^0.2.31",
     "glob": "^7.1.6",
     "mocha": "^8.3.2",
     "ts-standard": "^10.0.0",
