--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "YAML-tmLanguage",
     "TextMate"
   ],
-  "main": "./out/src/extension",
+  "main": "./dist/main",
   "activationEvents": [
     "onLanguage:xml",
     "onLanguage:yaml",
@@ -128,7 +128,10 @@
     ]
   },
   "scripts": {
-    "vscode:prepublish": "tsc -p ./",
+    "vscode:prepublish": "npm run esbuild-base -- --minify",
+    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=dist/main.js --external:vscode --format=cjs --platform=node",
+    "esbuild": "npm run esbuild-base -- --sourcemap",
+    "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
     "compile": "tsc -watch -p ./",
     "pretest": "tsc -p ./",
     "test": "ts-standard && node ./out/test/runTest.js"
@@ -144,6 +147,7 @@
     "@types/node": "^14.14.44",
     "@types/plist": "^3.0.2",
     "@types/vscode": "^1.55.0",
+    "esbuild": "^0.12.21",
     "glob": "^7.1.6",
     "mocha": "^8.3.2",
     "ts-standard": "^10.0.0",
