Use more conventional file extensions
'.tmLanguage.json' instead of '.JSON-tmLanguage' and similar for YAML.
This is taken from a PR by user SNDST00M which I could not pull because
the source repo had been deleted from GitHub.

--- a/package.json
+++ b/package.json
@@ -51,15 +51,15 @@
     "commands": [
       {
         "command": "extension.convertToJsonTml",
-        "title": "Convert to JSON-tmLanguage File"
+        "title": "Convert to tmLanguage JSON File"
       },
       {
         "command": "extension.convertToYamlTml",
-        "title": "Convert to YAML-tmLanguage File"
+        "title": "Convert to tmLanguage YAML File"
       },
       {
         "command": "extension.convertToTml",
-        "title": "Convert to tmLanguage File"
+        "title": "Convert to tmLanguage PLIST File"
       },
       {
         "command": "extension.convertTo",
@@ -74,6 +74,7 @@
           "json-tmlanguage"
         ],
         "extensions": [
+          ".tmLanguage.json",
           ".JSON-tmLanguage"
         ],
         "configuration": "./json-tmlanguage.configuration.json"
@@ -85,7 +86,9 @@
           "yaml-tmlanguage"
         ],
         "extensions": [
-          ".YAML-tmLanguage"
+          ".tmLanguage.yml",
+          ".YAML-tmLanguage",
+          ".tmLanguage.yaml"
         ],
         "configuration": "./yaml-tmlanguage.configuration.json"
       }
