--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -41,6 +41,33 @@
 			"problemMatcher": [],
 			"label": "npm: test",
 			"detail": "ts-standard"
+		},
+		{
+			"type": "npm",
+			"script": "esbuild-watch",
+			"group": "build",
+			"problemMatcher": [],
+			"label": "npm: esbuild-watch",
+			"detail": "npm run esbuild-base -- --sourcemap --watch"
+		},
+		{
+			"type": "npm",
+			"script": "esbuild",
+			"group": "build",
+			"problemMatcher": [],
+			"label": "npm: esbuild",
+			"detail": "npm run esbuild-base -- --sourcemap"
+		},
+		{
+			"type": "npm",
+			"script": "compile",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"problemMatcher": [],
+			"label": "npm: compile",
+			"detail": "tsc -watch -p ./"
 		}
 	]
 }
