--- a/package.json
+++ b/package.json
@@ -129,7 +129,7 @@
   },
   "scripts": {
     "vscode:prepublish": "npm run esbuild-base -- --minify",
-    "esbuild-base": "esbuild ./src/extension.ts --bundle --outfile=dist/main.js --external:vscode --format=cjs --platform=node",
+    "esbuild-base": "esbuild ./src/extension.ts --bundle --main-fields=module,main --outfile=dist/main.js --external:vscode --format=cjs --platform=node",
     "esbuild": "npm run esbuild-base -- --sourcemap",
     "esbuild-watch": "npm run esbuild-base -- --sourcemap --watch",
     "compile": "tsc -watch -p ./",
@@ -137,21 +137,21 @@
     "test": "ts-standard && node ./out/test/runTest.js"
   },
   "dependencies": {
-    "jisons": "^1.0",
+    "jsonc-parser": "^3.0.0",
     "plist": "^3.0.1",
     "yaml": "^1.10.0"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.2.2",
+    "@types/mocha": "^9.1.0",
     "@types/node": "^14.14.44",
     "@types/plist": "^3.0.2",
     "@types/vscode": "^1.55.0",
-    "esbuild": "^0.12.21",
+    "@vscode/test-electron": "^2.1.2",
+    "esbuild": "^0.14.21",
     "glob": "^7.1.6",
-    "mocha": "^8.3.2",
-    "ts-standard": "^10.0.0",
-    "typescript": "^4.2.4",
-    "vscode-test": "^1.5.2"
+    "mocha": "^9.2.0",
+    "ts-standard": "^11.0.0",
+    "typescript": "^4.2.4"
   }
 }
